# vnlims

.claude/: settings.json
client/: .gitignore  package.json  vite.config.ts
client/src/: App.vue  main.ts
client/src/assets/: base.css  main.css
client/src/components/: Form.vue  Login.vue  Search.vue  SearchItemCName.vue  SearchMNotes.vue  SearchPrincipal.vue  SearchProperty.vue  SearchTNotes.vue  Sidebar.vue  UpdateDatabase.vue
client/src/public/: 404.html
client/src/router/: index.ts
client/src/stores/: search.ts  stack.ts
client/src/types/: index.ts
client/src/utils/: api.ts  index.ts
client/src/views/: Home.vue  Notes.vue  Settings.vue  Stack.vue  TextProcessor.vue
server/: .gitignore  package.json  vnlims.ps1
server-rs/: .gitignore  Cargo.toml  README.md  start.ps1
server-rs/api/: Cargo.toml
server-rs/api/src/: hander.rs  handler.rs  layer.rs  lib.rs
server-rs/entity/: Cargo.toml  README.md
server-rs/entity/src/: mod.rs  prelude.rs  project.rs
server-rs/migration/: Cargo.toml
server-rs/migration/src/: lib.rs  m20250413_095241_create.rs
server-rs/service/: Cargo.toml
server-rs/service/src/: lib.rs  mutation.rs  query.rs  types.rs
server-rs/spider/: Cargo.toml
server-rs/spider/src/: lib.rs
server/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
server/src/project/: project.entity.ts
server/src/types/: index.ts
server/src/utils/: index.ts
