[package]
name = "axum-example-api"
version = "0.1.0"
authors = ["Yoshiera Huang <huangjasper@126.com>"]
edition = "2021"
publish = false

[dependencies]
axum-example-service = { path = "../service" }
tokio = { version = "1.34.0", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "trace", "cors"] }
tower-cookies = "0.11"
anyhow = "1.0.75"
dotenvy = "0.15.7"
serde = "1.0.193"
serde_json = "1.0.108"
tera = "1.19.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "local-time"] }
time = { version = "0.3", features = ["local-offset"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
spider = { path = "../spider" }
lazy_static = "1.5.0"
chrono = "0.4.40"
hyper = "1.6.0"
tracing = "0.1.41"
percent-encoding = "2.3.1"
