[package]
name = "spider"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
reqwest = {version = "0.12.8", features = ["blocking", "json", "multipart", "cookies", "stream"] }
tokio = {version = "1", features = ["full"]}
urlencoding = "2.1.3"

entity = { path = "../entity" }
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
